--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,6 +34,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd tests
         python -m poetry install
 
     - name: Run tests
