--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,9 +34,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd tests
         python -m poetry install
 
     - name: Run tests
       run: |
-        python -m poetry run python -m unittest discover
+        ls
+        cd tests
+        python -m poetry run python -m unittest test_tests.py
