--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,9 +2,9 @@ name: Python UnitTests
 
 on:
  push:
-    branches: [ master ]
+    branches: [ 1.x.x ]
  pull_request:
-    branches: [ master ]
+    branches: [ 1.x.x ]
 
 jobs:
  build:
