--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/Kokonico/ObjLog"
 keywords = ["logging", "object", "objectified", "log", "logger", "loggers", "OOP", "python", "python3", "python3.9", "python3.10", "python3.11", "python3.12"]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10, <4.0"
 
 
 [build-system]
