--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,8 @@
 # Minimal makefile for Sphinx documentation
 #
 
+# mac & linux support 😎😎😎 👍👍👍
+
 # You can set these variables from the command line, and also
 # from the environment for the first two.
 SPHINXOPTS    ?=
