--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ keywords = ["logging", "object", "objectified", "log", "logger", "loggers", "OOP
 [tool.poetry.dependencies]
 python = ">=3.10, <4.0"
 sphinx = "^7.2.6"
+myst-parser = "^2.0.0"
 
 
 [build-system]
