--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,11 +6,12 @@ build:
     python: "3.10"
 
 python:
+  version: 3.10
   install:
     - method: pip
       path: .
-    - requirements: requirements.txt
-      method: pip
+    - requirements: pyproject.toml
+      method: poetry
 
 sphinx:
   configuration: docs/conf.py
