--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,7 @@ build:
 
 python:
   install:
-    - method: poetry
+    - method: pip
       path: .
     - requirements: pyproject.toml
       method: poetry
