--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,7 @@ build:
 python:
   install:
     - method: pip
+      requirements: pyproject.toml
     - requirements: pyproject.toml
       method: poetry
 
