--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ build:
 python:
   install:
     - method: pip
-      path: ./objlog
+      path: .
     - requirements: pyproject.toml
       method: poetry
 
