--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,10 +9,8 @@ python:
   install:
     - method: pip
       path: .
-      extra_requirements:
-        - docs
-    - requirements: pyproject.toml
-      method: poetry
+    - requirements: requirements.txt
+      method: pip
 
 sphinx:
   configuration: docs/conf.py
