--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,7 @@ python:
   install:
     - method: pip
       path: .
-    - requirements: requirements.txt
+    - requirements: readthedocs_requirements.txt
 
 sphinx:
   configuration: docs/conf.py
