--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,42 +1,31 @@
 name: Python UnitTests
 
 on:
- push:
+  push:
     branches: [ master ]
- pull_request:
+  pull_request:
     branches: [ master ]
 
 jobs:
- build:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.10, 3.11, 3.12, 3.13]
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.12
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.12
-
-    - name: Install poetry
-      run: |
-        python -m pip install poetry
-
-    - name: Configure poetry
-      run: |
-        python -m poetry config virtualenvs.in-project true
-
-    - name: Cache the virtualenv
-      uses: actions/cache@v2
-      with:
-        path: ./.venv
-        key: ${{ runner.os }}-venv-${{ hashFiles('**/poetry.lock') }}
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
-        python -m poetry install
+        python -m pip install --upgrade pip
+        python -m pip install tox
 
     - name: Run tests
       run: |
-        mkdir logs
-        python -m poetry run python -m unittest tests/test_tests.py
+        tox
