--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,14 +3,15 @@ name: Python UnitTests
 on:
   push:
     branches:
-    - '*'
+      - '*'
   pull_request:
     branches:
-    - '*'
+      - '**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         python-version: [3.10, 3.11, 3.12, 3.13]
@@ -23,11 +24,26 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install poetry
+      run: |
+        python -m pip install poetry
+
+    - name: Configure poetry
+      run: |
+        python -m poetry config virtualenvs.in-project true
+
+    - name: Cache the virtualenv
+      uses: actions/cache@v2
+      with:
+        path: ./.venv
+        key: ${{ runner.os }}-venv-${{ hashFiles('**/poetry.lock') }}
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install tox
+        python -m poetry install
 
     - name: Run tests
       run: |
-        tox
+        mkdir logs
+        python -m poetry run python -m unittest tests/test_tests.py
+
