--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,21 @@
-[tool.poetry]
+[project]
 name = "ObjLog"
-version = "3.0.1"
+version = "3.0.2"
 description = "Logging, Objectified."
-authors = ["Kokonico <kokonico@duck.com>"]
+authors = [
+    { name = "Kokonico", email = "kokonico@duck.com" }
+]
 readme = "README.md"
 license = "Zlib"
-repository = "https://github.com/Kokonico/ObjLog"
 keywords = ["logging", "object", "objectified", "log", "logger", "loggers", "OOP", "python", "python3", "python3.10", "python3.11", "python3.12"]
+classifiers = [
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+requires-python = ">=3.10"
 
-[tool.poetry.dependencies]
-python = ">=3.10, <4.0"
+[project.urls]
+documentation = "https://objlog.rtfd.io/"
+repository = "https://github.com/Kokonico/ObjLog"
 
 
 [build-system]
