Async first test

--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,5 @@ envlist = py310, py311, py312, py313, py314
 
 [testenv]
 changedir = tests
-commands = python -m unittest ./test_tests.py
+commands = python -m unittest ./test_synchronous.py
+           python -m unittest ./test_asynchronous.py
