--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -47,5 +47,5 @@ jobs:
     - name: Run tests
       run: |
         mkdir logs
-        python -m poetry run python -m unittest tests/test_tests.py
+        python -m poetry run python -m unittest discover -s tests -t tests
 
