update lognode and tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,4 @@ envlist = py310, py311, py312, py313, py314
 
 [testenv]
 changedir = tests
-commands = python -m unittest ./test_synchronous.py
-           python -m unittest ./test_asynchronous.py
+commands = python -m unittest discover -s . -t .
